WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286572
MediaStreamTrack audio rendering may be broken in case page is capturing with and without echo cancellation
https://bugs.webkit.org/show_bug.cgi?id=286572
Summary
MediaStreamTrack audio rendering may be broken in case page is capturing with...
youenn fablet
Reported
2025-01-27 06:49:53 PST
MediaStreamTrack audio rendering may be broken in case page is capturing with and without echo cancellation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-27 06:50:09 PST
<
rdar://problem/143691994
>
youenn fablet
Comment 2
2025-01-27 07:00:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39591
EWS
Comment 3
2025-01-28 07:25:19 PST
Committed
289449@main
(fafc27995052): <
https://commits.webkit.org/289449@main
> Reviewed commits have been landed. Closing PR #39591 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug